# UltimateTicTacToe-DeepLearning

./: .gitignore  Coach.py  EpisodeWorker.py  Game.py  LiteModel.py  MCTS.py  OldMCTS.py  WorkerOrganizer.py  args.py  display.py  generate_winning_masks.py  main.py  pit.py  profiler.py  test.py  toTFLite.py  utils.py
UltimateTicTacToe/: UltimateTicTacToeGame.py  UltimateTicTacToePlayers.py
UltimateTicTacToe/keras/: NNet.py  TicTacToeNNet.py
UltimateTicTacToeCpp/: CMakeLists.txt  MCTS.pxd  MCTS.pyx  Minimax.pxd  Minimax.pyx  SelfPlay.pxd  SelfPlay.pyx  createGetSymmetries.py
UltimateTicTacToeCpp/include/: BatchManager.h  GameState.h  Minimax.h  MonteCarlo.h  SelfPlay.hpp
UltimateTicTacToeCpp/src/: BatchManager.cpp  GameState.cpp  Minimax.cpp  MonteCarlo.cpp  SelfPlay.cpp  main.cpp
tictactoe/keras/: NNet.py
